# SistemaInventarioKasu

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  context.md  main.py  plan_equipo_kasu.md  pyproject.toml
.do/: app.yaml
apps/bajas/: apps.py  forms.py  models.py  service.py  urls.py  views.py
apps/bajas/migrations/: 0001_initial.py
apps/inventario/: admin.py  forms.py  models.py  urls.py  views.py
apps/inventario/fixtures/: inventario_inicial.json
apps/inventario/migrations/: 0001_initial.py
apps/mantenimiento/: forms.py  models.py  urls.py  views.py
apps/mantenimiento/migrations/: 0001_initial.py
apps/reportes/: apps.py  models.py  scheduler.py  service.py  urls.py  views.py
apps/reportes/migrations/: 0001_initial.py
apps/tickets/: forms.py  models.py  notifications.py  urls.py  urls_qr.py  views.py
apps/tickets/migrations/: 0001_initial.py
apps/usuarios/: urls.py  views.py
config/: settings.py  urls.py
scripts/: setup_inicial.sh
static/css/: kasu.css
templates/: base.html  dashboard.html
templates/bajas/: detalle.html  fase1_solicitud.html  fase2_ejecucion.html  fase3_destruccion.html  fase4_cierre.html  lista.html
templates/emails/: ticket_abierto.html  ticket_cerrado.html
templates/inventario/: detalle.html  etiquetas_qr.html  form.html  lista.html
templates/mantenimiento/: alertas.html  lista.html  registrar_qr.html
templates/reportes/: lista.html
templates/tickets/: detalle.html  lista.html  ticket_enviado.html  ticket_publico.html
templates/usuarios/: login.html  perfil.html
(+6 files in other folders)
